--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="container1">
             <img src="./38828365395.png" alt="squatting">
-            <span> <h1 > YOGA WEARS</h1></span>
+            <span> <h1 > YOGA WEAR</h1></span>
             <button id="cost" onclick="site()"> Purchase - $ 230</button>
             <p id="error"></p>
 
