--- a/index.html
+++ b/index.html
@@ -49,11 +49,17 @@
                 <p class="play" id="summation">Sum:</p>
                 <button onclick="start()">START GAME </button>
                 <button onclick="newgame()">NEW CARD</button>
+                <div id="name"></div>
             </div>
         </div>
 
     </div>
 
+    <div class="fruits" onclick="fruitsShelves()">
+        <div class="heading">Placing Apple and Orange in different shelve</div>
+        <div id="orangeshelf"></div>
+        <div id="appleshelf"></div>
+    </div>
 
     <script src=" ./index.js ">
     </script>
